// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeSeparator renders correctly 1`] = `
<Divider
  text="text"
  type="light"
/>
`;

exports[`TradeSeparator renders correctly with disputeActive 1`] = `
<Divider
  text="text"
  type="error"
/>
`;

exports[`TradeSeparator renders correctly with iconColor 1`] = `
<Divider
  icon={
    <Icon
      color="iconColor"
      id="xCircle"
      style={
        {
          "height": 16,
          "marginRight": 4,
          "width": 16,
        }
      }
    />
  }
  text="text"
  type="light"
/>
`;

exports[`TradeSeparator renders correctly with iconId 1`] = `
<Divider
  icon={
    <Icon
      color="#DF321F"
      id="xCircle"
      style={
        {
          "height": 16,
          "marginRight": 4,
          "width": 16,
        }
      }
    />
  }
  text="text"
  type="light"
/>
`;

exports[`TradeSeparator renders correctly with iconId, iconColor and disputeActive 1`] = `
<Divider
  icon={
    <Icon
      color="iconColor"
      id="xCircle"
      style={
        {
          "height": 16,
          "marginRight": 4,
          "width": 16,
        }
      }
    />
  }
  text="text"
  type="error"
/>
`;
